# mcp-fema-usar

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  STANDARD.md  example_config.json  fly.toml  index.html  pyproject.toml  requirements.txt  server.py
.github/workflows/: README.md  ci.yml  dependency-updates.yml  deploy.yml  release.yml  test.yml
app/: __init__.py  main.py
deployment/: Dockerfile.prod  docker-compose.prod.yml
deployment/mobile/: Dockerfile.mobile  docker-compose.mobile.yml
deployment/nginx/: nginx.conf
doc/: CI_CD_SUMMARY.md
fema_usar_mcp/: __init__.py  constants.py  core.py  fastmcp_server.py  performance.py
fema_usar_mcp/communications/: realtime.py
fema_usar_mcp/compliance/: audit.py
fema_usar_mcp/gateway/: api_gateway.py
fema_usar_mcp/integrations/: __init__.py  communications.py  equipment.py  fema_iris.py  fema_systems.py  nims_ict.py
fema_usar_mcp/mobile/: server.py
fema_usar_mcp/models/: __init__.py  equipment.py  operations.py  personnel.py
fema_usar_mcp/monitoring/: __init__.py  metrics.py
fema_usar_mcp/security/: __init__.py  auth.py
fema_usar_mcp/storage/: backup.py  database.py
fema_usar_mcp/tools/: __init__.py  command.py  decision_support.py  logistics.py  medical.py  planning.py  rescue.py  search.py  technical.py
requirements/: prod.txt
resources/: documents.json  ics_forms.json  open_datasets.json
tests/: __init__.py  conftest.py  test_fastmcp.py  test_field_simulation.py  test_http_api.py  test_integration.py  test_server.py
